# avr-pc-remote

./: Cargo.toml  LICENSE.md  README.md  config.json
src/: _main.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs
src/binds/: bind.rs  mod.rs
src/emulator/: audio.rs  keyboard.rs  media.rs  mod.rs  mouse.rs
