[package]
name = "avr-pc-remote"
description = "PC control panel based on 'Arduino Nano' board"
version = "0.1.0"
authors = ["Bulat Sh. <t.me/fuderis>"]
license = "MIT"
readme = "README.md"
edition = "2024"

[lib]
name = "app"
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
macron = { version = "0.1.6", features = ["derive", "string", "collections"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
log = "0.4.27"
rand = "0.8.5"
serialport = "4.7.2"
enigo = "0.5.0"
webbrowser = "1.0.5"
csv = "1.3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(linux)'.dependencies]
x11-dl = "2.18"

[target.'cfg(macos)'.dependencies]
core-graphics = "0.22"
